--- a/src/app/modules/main/content/components/releases/components/release-sign-off/release-sign-off.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-sign-off/release-sign-off.component.html
@@ -25,7 +25,32 @@
 
                 <div class="w-full flex" style="height: 70vh;">
                     <!-- Workflow Steps -->
-                    <div class="w-3/12 p-4 rounded-tl-md border-r border-gray-200"></div>
+                    <div class="w-3/12 p-4 rounded-tl-md border-r border-gray-200">
+                        <div class="w-full border border-blue-200 rounded-md flex mb-4">
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-blue-200 bg-blue-600 flex justify-center items-center text-white">1</div>
+                            <div class="w-10/12 p-4">Examine Release Aspects</div>
+                        </div>
+
+                        <div class="w-full border border-gray-200 rounded-md flex mb-4">
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-300 flex justify-center items-center text-white">2</div>
+                            <div class="w-10/12 p-4">Re-arrange Release Aspects</div>
+                        </div>
+
+                        <div class="w-full border border-gray-200 rounded-md flex mb-4">
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-300 flex justify-center items-center text-white">3</div>
+                            <div class="w-10/12 p-4">Preview Release Notes</div>
+                        </div>
+
+                        <div class="w-full border border-gray-200 rounded-md flex mb-4">
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-300 flex justify-center items-center text-white">4</div>
+                            <div class="w-10/12 p-4">Sign-Off Approvals</div>
+                        </div>
+
+                        <div class="w-full border border-gray-200 rounded-md flex mb-4">
+                            <div class="w-2/12 p-4 border-r rounded-l-md border-gray-200 bg-blue-300 flex justify-center items-center text-white">5</div>
+                            <div class="w-10/12 p-4">View & Download</div>
+                        </div>
+                    </div>
 
                     <!-- Workflow Step Content -->
                     <div class="w-9/12 bg-gray-50 p-4 rounded-br-md"></div>
